// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndicesList should change pages 1`] = `
<div>
  <table
    class="euiTable emotion-euiTable-auto-uncompressed-desktop"
    tabindex="-1"
  >
    <tbody>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              index-10
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              index-11
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              index-12
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              index-13
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              index-14
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="customizablePagination"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Rows per page: 10
            </span>
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <nav
        class="euiPagination emotion-euiPagination"
      >
        <span
          aria-atomic="true"
          aria-relevant="additions text"
          class="emotion-euiScreenReaderOnly"
          role="status"
        >
          Page 2 of 2
        </span>
        <button
          aria-label="Previous page"
          class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
          data-test-subj="pagination-button-previous"
          title="Previous page"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
        </button>
        <ul
          class="euiPagination__list emotion-euiPagination__list"
        >
          <li
            class="euiPagination__item"
          >
            <button
              aria-label="Page 1 of 2"
              class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
              data-test-subj="pagination-button-0"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  1
                </span>
              </span>
            </button>
          </li>
          <li
            class="euiPagination__item"
          >
            <button
              aria-current="page"
              aria-label="Page 2 of 2"
              class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
              data-test-subj="pagination-button-1"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  2
                </span>
              </span>
            </button>
          </li>
        </ul>
        <button
          aria-label="Next page"
          class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
          data-test-subj="pagination-button-next"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="arrowRight"
          />
        </button>
      </nav>
    </div>
  </div>
</div>
`;

exports[`IndicesList should change per page 1`] = `
<div>
  <table
    class="euiTable emotion-euiTable-auto-uncompressed-desktop"
    tabindex="-1"
  >
    <tbody>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              kibana
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              es
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="customizablePagination"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Rows per page: 5
            </span>
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`IndicesList should highlight fully when an exact match 1`] = `
<div>
  <table
    class="euiTable emotion-euiTable-auto-uncompressed-desktop"
    tabindex="-1"
  >
    <tbody>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              <span>
                <strong>
                  logs
                </strong>
                tash
              </span>
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              <strong>
                some_logs
              </strong>
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="customizablePagination"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Rows per page: 10
            </span>
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`IndicesList should highlight the query in the matches 1`] = `
<div>
  <table
    class="euiTable emotion-euiTable-auto-uncompressed-desktop"
    tabindex="-1"
  >
    <tbody>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              <span>
                <strong>
                  ki
                </strong>
                bana
              </span>
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              <strong>
                es
              </strong>
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="customizablePagination"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Rows per page: 10
            </span>
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`IndicesList should render normally 1`] = `
<div>
  <table
    class="euiTable emotion-euiTable-auto-uncompressed-desktop"
    tabindex="-1"
  >
    <tbody>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              kibana
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              es
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="customizablePagination"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Rows per page: 10
            </span>
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`IndicesList updating props should render all new indices 1`] = `
<div>
  <table
    class="euiTable emotion-euiTable-auto-uncompressed-desktop"
    tabindex="-1"
  >
    <tbody>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              kibana
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              es
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              kibana
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              es
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              kibana
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              es
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              kibana
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              es
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              kibana
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
      <tr
        class="euiTableRow emotion-euiTableRow-desktop"
      >
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            >
              es
            </span>
          </div>
        </td>
        <td
          class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-wrapText"
          >
            <span
              class="euiTableCellContent__text"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="customizablePagination"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Rows per page: 10
            </span>
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <nav
        class="euiPagination emotion-euiPagination"
      >
        <span
          aria-atomic="true"
          aria-relevant="additions text"
          class="emotion-euiScreenReaderOnly"
          role="status"
        >
          Page 1 of 2
        </span>
        <button
          aria-label="Previous page"
          class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
          data-test-subj="pagination-button-previous"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
        </button>
        <ul
          class="euiPagination__list emotion-euiPagination__list"
        >
          <li
            class="euiPagination__item"
          >
            <button
              aria-current="page"
              aria-label="Page 1 of 2"
              class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
              data-test-subj="pagination-button-0"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  1
                </span>
              </span>
            </button>
          </li>
          <li
            class="euiPagination__item"
          >
            <button
              aria-label="Page 2 of 2"
              class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
              data-test-subj="pagination-button-1"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  2
                </span>
              </span>
            </button>
          </li>
        </ul>
        <button
          aria-label="Next page"
          class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
          data-test-subj="pagination-button-next"
          title="Next page"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="arrowRight"
          />
        </button>
      </nav>
    </div>
  </div>
</div>
`;
